# Agent_Trading_Company

./: .env.example  .gitignore  agent_trading_company_계획서_v_0.md  config.py  config.toml  main.py  opencode.json  pyproject.toml  readme.md  requirements.txt  rules.md  watchlist.json  계획.md
.claude/: settings.local.json
.codex/environments/: environment.toml
.sisyphus/: boulder.json
.sisyphus/plans/: agent-trading-company.md
agent_trading_company/: __init__.py
agent_trading_company/agents/: analyst.py  collector.py  critic.py  executor.py  judge.py  portfolio.py
agent_trading_company/core/: contracts.py  directives.py  paths.py  status_registry.py
agent_trading_company/io/: __init__.py  atomic_writer.py  file_lock.py  watcher.py
agents/: __init__.py  base.py  data_analyst.py  data_collector.py  llm.py  market_schedule.py  report.py  risk_manager.py  trade_executor.py
config/: corp_code_map.csv  universe.csv
directives/: admin_directives.md
docs/: agent_guidelines.md
docs/agents/: OpsAgent.md  (+19 more)
frontend/: index.html  package-lock.json  package.json
kis/: __init__.py  client.py  endpoints.py  models.py  ws_client.py
server/: __init__.py  app.py  routes.py  ws.py
tests/: test_analyst.py  test_atomic_io.py  test_collector.py  test_contracts.py  test_critic.py  test_critic_scoring.py  test_directives.py  test_executor.py  test_guideline_flow.py  test_judge.py  test_kis_client.py  test_memory_summary.py  test_orchestrator.py  test_portfolio.py  test_signal_schema.py  test_state.py  test_storage.py
web/: index.html  package-lock.json  package.json
(+64 files in other folders)
