[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trading-company"
version = "0.1.0"
description = "Agent Trading Company MVP"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "pytest",
  "watchdog",
  "requests",
  "pydantic",
  "responses",
  "pyyaml",
  "python-dotenv",
  "beautifulsoup4",
  "lxml",
]

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
